--- a/NovaModa/app/config/parameters.yml
+++ b/NovaModa/app/config/parameters.yml
@@ -1,10 +1,11 @@
 # This file is auto-generated during the composer install
 parameters:
-    database_host: 127.0.0.1
+    database_host: localhost
     database_port: null
-    database_name: novamoda
-    database_user: root
-    database_password: null
+    database_name: novamod2_balderrama
+    database_user: novamod2_tienda
+    database_password: 4r3Ep92gklLK6.    
+    
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
