--- a/NovaModa/app/config/parameters.yml
+++ b/NovaModa/app/config/parameters.yml
@@ -1,4 +1,4 @@
-# This file is auto-generated during the composer install
+# This file is auto-genewwwrated during the composer install
 parameters:
     database_host: novamoda.com.bo
     database_port: null
